--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "grunt": "~0.4",
         "grunt-contrib-uglify": "~0.4",
         "grunt-contrib-concat": "~0.3.0",
+        "karma": "~0.12",
         "grunt-karma": "~0.9.0",
         "grunt-contrib-clean": "~0.5.0",
         "load-grunt-tasks": "^0.4.0",
