--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,24 @@
 {
-    "name": "ng-utilities",
-    "version": "1.0.0",
-    "ignore": [
-        "**/.*",
-        "test",
-        "samples",
-        "build",
-        "*.md",
-        "karma.conf.js",
-        "LICENSE",
-        "Gruntfile.js",
-        "package.json",
-        "bower.json"
-    ],
-    "main": "./dist/ng-utilities.js",
-    "dependencies": {
-        "angular": "~1.3"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.3"
-    }
+  "name": "ng-utilities",
+  "version": "1.0.0",
+  "ignore": [
+    "**/.*",
+    "test",
+    "samples",
+    "build",
+    "*.md",
+    "karma.conf.js",
+    "LICENSE",
+    "Gruntfile.js",
+    "package.json",
+    "bower.json"
+  ],
+  "main": "./dist/ng-utilities.js",
+  "dependencies": {
+    "angular": "~1.3"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3",
+    "jquery": "~2.1.3"
+  }
 }
