--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -22,6 +22,7 @@
         "after": false,
         "afterEach": false,
         "angular": false,
+        "$": false,
         "before": false,
         "beforeEach": false,
         "browser": false,
