--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "ignore": [
     "**/.*",
     "test",
-    "samples",
+    "examples",
     "build",
     "*.md",
     "karma.conf.js",
@@ -15,7 +15,8 @@
   ],
   "main": "./dist/ng-utilities.js",
   "dependencies": {
-    "angular": "~1.3"
+    "angular": "~1.3",
+    "angular-messages": "~1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3",
