--- a/.jshintrc
+++ b/.jshintrc
@@ -24,6 +24,7 @@
         "beforeEach", // Used by mocha
         "after", // Used by mocha
         "afterEach", // Used by mocha,
-        "angular"
+        "angular",
+        "moment"
     ]
 }
