--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
   "main": "./dist/ng-utilities.js",
   "dependencies": {
     "angular": "~1.3",
-    "angular-messages": "~1.3"
+    "angular-messages": "~1.3",
+    "moment": "~2.9.0",
+    "moment-timezone": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3",
