--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-utilities",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "ignore": [
     "**/.*",
     "test",
@@ -15,13 +15,13 @@
   ],
   "main": "./dist/ng-utilities.js",
   "dependencies": {
-    "angular": "~1.3",
-    "angular-messages": "~1.3",
+    "angular": "^1.3",
+    "angular-messages": "^1.3",
     "moment": "~2.9.0",
     "moment-timezone": "~0.3.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3",
+    "angular-mocks": "^1.3",
     "jquery": "~2.1.3"
   }
 }
